--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/loveit"]
 	path = themes/loveit
-	url = git@github.com:dillonzq/LoveIt.git
+	url = https://github.com/dillonzq/LoveIt.git
