update: posts status

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "https://64299be980015700086ffae8--isaac-the-blog.netlify.app/"
 languageCode = "en-us"
 title = "IsaacTheBlog"
 theme = "loveit"
