new post: mountain car rl

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,6 +44,11 @@
             "language": "markdown",
             "scheme": "file",
             "pattern": "content/posts/connect-with-home-server-remotely-via-tailscale/index.md"
+        },
+        {
+            "language": "markdown",
+            "scheme": "file",
+            "pattern": "content/posts/reinforcement-learning-mountain-car/index.md"
         }
     ]
 }
