--- a/config.toml
+++ b/config.toml
@@ -200,6 +200,20 @@ theme = "loveit"
     # KaTeX 数学公式配置 (KaTeX https://katex.org/)
     [params.page.math]
       enable = true
+      # default inline delimiter is $ ... $ and \( ... \)
+      # 默认行内定界符是 $ ... $ 和 \( ... \)
+      inlineLeftDelimiter = ""
+      inlineRightDelimiter = ""
+      # default block delimiter is $$ ... $$, \[ ... \], \begin{equation} ... \end{equation} and some other functions
+      # 默认块定界符是 $$ ... $$, \[ ... \],  \begin{equation} ... \end{equation} 和一些其它的函数
+      blockLeftDelimiter = ""
+      blockRightDelimiter = ""
+      # KaTeX extension copy_tex
+      # KaTeX 插件 copy_tex
+      copyTex = true
+      # KaTeX extension mhchem
+      # KaTeX 插件 mhchem
+      mhchem = true
 
     # Comment config
     # 评论系统设置
